# Doomculator--version-1.0

./: CMakeCache.txt  CMakeLists.txt  DEPLOY.md  Doomculator.cpp  Makefile  README.md  algorithms_explanation.md  app.js  cmake_install.cmake  compile_commands.json  date_utils.cpp  date_utils.h  doomsday.h  index.html  main.cpp  netlify.toml  styles.css  test_cases.cpp
